--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <!--<item name="textColorSecondary">@color/secondary_text</item>-->
         <item name="icon">@color/icons</item>
         <item name="divider">@color/divider</item>
+        <item name="android:navigationBarColor">@color/primary</item>
 
     </style>
 
@@ -48,18 +49,35 @@
 
 
 
-    <style name="WorktajmLoginButton" parent="android:Widget.Material.Button">
+    <style name="Worktajm.Button" parent="@android:style/Widget.Material.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:colorBackground">@color/primary</item>
-        <item name="android:background">@color/primary</item>
-        <item name="android:layout_marginTop">16dp</item>
-        <item name="android:textColor">@color/icons</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:focusable">true</item>
-        <item name="android:focusableInTouchMode">true</item>
-        <!--<item name="android:color">#FFFFFF</item>-->
+        <item name="android:colorButtonNormal">@color/primary</item>
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+
+        <item name="android:colorAccent">@color/accent</item>
     </style>
+
+    <style name="Worktajm.LoginButton" parent="Worktajm.Button">
+    </style>
+
+    <style name="Worktajm.LoginButton.Blue" parent="Worktajm.LoginButton">
+        <item name="android:colorButtonNormal">@color/md_material_blue_800</item>
+    </style>
+
+    <style name="Worktajm.ProjectButton.Start" parent="Worktajm.LoginButton">
+        <item name="android:colorButtonNormal">@color/project_inactive</item>
+        <item name="android:textColorPrimary">@color/secondary_text</item>
+    </style>
+
+    <style name="Worktajm.ProjectButton.Stop" parent="Worktajm.LoginButton">
+        <item name="android:colorButtonNormal">@color/project_active</item>
+        <item name="android:textColorPrimary">@color/secondary_text</item>
+    </style>
+
 
     <style name="worktajmText">
         <item name="android:textColor">@color/icons</item>
